# cgc

./: .gitignore  CONTRIBUTING.md  EXTRACTION_ARCHITECTURE.md  README-MAC.md  README-WINDOWS.md  README.md  THIRD_PARTY_NOTICES.md  cgc.spec  cgc_mcp.bat  cgc_mcp.spec  context-graph-connector-spec-python.md  context-graph-paper.txt  context_graph_structure.txt  launch_cgc.sh  pyproject.toml  run_mcp.py
.github/workflows/: build.yml  ci.yml
benchmarks/: extraction_benchmark.py
cgc/: __init__.py  connector.py
cgc/adapters/: __init__.py  base.py  filesystem.py  parsers.py  sql.py
cgc/adapters/graph/: __init__.py  age.py  base.py  kuzudb.py  neo4j.py
cgc/adapters/vector/: __init__.py  base.py  mongodb.py  pgvector.py  pinecone.py  qdrant.py
cgc/api/: __init__.py  secure_server.py  server.py
cgc/cache/: __init__.py
cgc/cli/: __init__.py  main.py
cgc/core/: __init__.py  chunk.py  errors.py  graph.py  query.py  schema.py  triplet.py
cgc/discovery/: __init__.py  constraints.py  engine.py  extractor.py  filters.py  gliner.py  gliner2.py  glirel.py  industry_packs.py  patterns.py  router.py  structured.py  unified.py
cgc/licensing/: __init__.py  store.py  tier.py  validator.py
cgc/mcp/: __init__.py  __main__.py  server.py
cgc/security/: __init__.py  auth.py  config.py  middleware.py  validation.py
cgc/session/: __init__.py  tracker.py
docs/: API.md  CLI.md  MARKETING.md  MCP.md  SECURITY.md  SITE-BUILDER-INSTRUCTIONS.md  TECHNICAL.md
hooks/: hook-cgc.discovery.py  hook-mcp.py
relay-api/: Dockerfile  main.py  railway.toml  requirements.txt
relay-api/src/: config.py  main.py
relay-api/src/middleware/: auth.py  rate_limit.py
relay-api/src/routes/: extract.py  health.py  license.py
tests/: __init__.py  test_smoke.py
