[project]
name = "context-graph-connector"
version = "0.6.0"
description = "Programmatic data access layer for LLM agents - navigate context, don't memorize it"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Anthony Lee", email = "anthony@anthonylee991.com" }
]
keywords = ["llm", "rag", "knowledge-graph", "data-access", "context", "mcp", "graph-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    # SQL databases
    "sqlalchemy>=2.0",
    "aiosqlite",

    # Data handling
    "pydantic>=2.0",
    "aiofiles",

    # Document parsing
    "pypdf>=3.0",
    "pdfplumber",
    "python-docx",
    "openpyxl",

    # CLI
    "typer>=0.9",
    "rich",

    # API server
    "fastapi>=0.100",
    "uvicorn[standard]",

    # MCP (Model Context Protocol)
    "mcp>=1.0",

    # Utilities
    "python-dotenv",
    "structlog",
    "httpx",
]

[project.optional-dependencies]
extraction = [
    "gliner",
    "glirel",
    "spacy>=3.5",
    "sentence-transformers>=2.0",
]
postgres = [
    "asyncpg",
    "pgvector",
]
mysql = [
    "aiomysql",
]
vector = [
    "qdrant-client>=1.0",
    "pinecone-client>=3.0",
    "pymongo>=4.0",
    "motor",
]
graph = [
    "kuzu",
]
all = [
    "context-graph-connector[extraction,postgres,mysql,vector,graph]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
cgc = "cgc.cli.main:main"
cgc-server = "cgc.api.server:main"
cgc-mcp = "cgc.mcp.server:main"

[project.urls]
Homepage = "https://github.com/anthonylee991/cgc"
Repository = "https://github.com/anthonylee991/cgc"
Issues = "https://github.com/anthonylee991/cgc/issues"
Documentation = "https://github.com/anthonylee991/cgc/tree/master/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cgc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
